[gd_scene load_steps=12 format=3 uid="uid://ipw6bqe3n2in"]

[ext_resource type="PackedScene" uid="uid://c2inbmoiph25r" path="res://Scenes/SettingWindow/NamaSetting.tscn" id="1"]
[ext_resource type="Theme" uid="uid://4g7pi1nwsoji" path="res://Theme/Perkedel_Tema.tres" id="2"]
[ext_resource type="Script" path="res://Scenes/JustWorkingSetting.gd" id="3"]
[ext_resource type="PackedScene" path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/InheritableSetting/InheritableSettingVolume.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dvykinyfm52b2" path="res://Scenes/SettingWindow/LayarSetting.tscn" id="5"]
[ext_resource type="FontFile" uid="uid://bmsas4i35f4x0" path="res://font/ubuntu-font-family-0.83/Ubuntu-B.ttf" id="8"]
[ext_resource type="PackedScene" path="res://modules/UI/SparePart/ButtoneBigJust.tscn" id="9"]
[ext_resource type="PackedScene" path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/InheritableSetting/TestoidSpeakerTryer.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://dtw4mwp00mu0b" path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/InheritableSetting/TestoidClock.tscn" id="11"]

[sub_resource type="FontFile" id="FontFile_vj0ox"]
resource_local_to_scene = true
resource_name = "Ubuntu 72 Bold"
fallbacks = Array[Font]([ExtResource("8")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_j3j0e"]
resource_local_to_scene = true
resource_name = "Ubuntu 72 Bold"
fallbacks = Array[Font]([ExtResource("8")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="JustWorkingSetting" type="AcceptDialog"]
title = "Setting"
position = Vector2i(100, 100)
size = Vector2i(1280, 720)
visible = true
popup_window = true
theme = ExtResource("2")
script = ExtResource("3")

[node name="Scrolle" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 1272.0
offset_bottom = 694.0

[node name="Windowe" type="VBoxContainer" parent="Scrolle"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NamaSetting" parent="Scrolle/Windowe" instance=ExtResource("1")]
layout_mode = 2

[node name="LayarSetting" parent="Scrolle/Windowe" instance=ExtResource("5")]
layout_mode = 2

[node name="anMasterVolume" parent="Scrolle/Windowe" instance=ExtResource("4")]
layout_mode = 2
VariableName = "Master Volume"
VolumeBus = "Master"

[node name="anMusicVolume" parent="Scrolle/Windowe" instance=ExtResource("4")]
layout_mode = 2
VariableName = "Music Volume"
VolumeBus = "Music"
TestoidPitch = 0.5

[node name="anSFXVolume" parent="Scrolle/Windowe" instance=ExtResource("4")]
layout_mode = 2
VariableName = "SFX Volume"
VolumeBus = "SoundEffect"
TestoidPitch = 1.5

[node name="ButtoneBigJust" parent="Scrolle/Windowe" instance=ExtResource("9")]
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_vj0ox")

[node name="ShowModListMenu" parent="Scrolle/Windowe" instance=ExtResource("9")]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_j3j0e")
text = "Show Mods List"

[node name="TestoidSpeakerTryer" parent="Scrolle/Windowe" instance=ExtResource("10")]
visible = false
layout_mode = 2

[node name="TestoidClock" parent="Scrolle/Windowe" instance=ExtResource("11")]
layout_mode = 2

[connection signal="confirmed" from="." to="." method="_on_JustWorkingSetting_confirmed"]
[connection signal="custom_action" from="." to="." method="_on_JustWorkingSetting_custom_action"]
[connection signal="pressed" from="Scrolle/Windowe/ShowModListMenu" to="." method="_on_ShowModListMenu_pressed"]
